# SafeTrace

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  urls.txt
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
safetrace/: __init__.py  __main__.py  cli.py  config.py  train.py
safetrace/core/: __init__.py  email_scanner.py  feature_extractor.py  url_scanner.py  utils.py
safetrace/models/: .gitkeep
