[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "safetrace"
version = "0.2.0"
description = "A lightweight AI-powered cybersecurity toolkit for phishing detection"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "SafeTrace Contributors"},
]
keywords = ["cybersecurity", "phishing", "machine-learning", "cli", "security"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "scikit-learn>=1.3.0",
    "joblib>=1.3.0",
    "numpy>=1.24.0",
]

[project.scripts]
safetrace = "safetrace.cli:main"

[project.urls]
Homepage = "https://github.com/safetrace/safetrace"
Issues = "https://github.com/safetrace/safetrace/issues"

[tool.setuptools.packages.find]
include = ["safetrace*"]

[tool.setuptools.package-data]
safetrace = ["models/*.joblib"]
